Fix backend and improve AMANAFARM